golden/error/parse_comment_after_if.test
if

  // A comment is not allowed here.
  true
  then 1 else 0

# output:
 --> stdin:3:2
  |
3 |   // A comment is not allowed here.
  |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Error: A comment is not allowed here.

 --> stdin:1:0
  |
1 | if
  | ^
Note: Try inserting the comment above this instead.
